// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders an Error component without crashing 1`] = `
<span
  className="error"
>
  <strong
    className="info"
  >
    Error
  </strong>
  
</span>
`;

exports[`Renders an Error with a subInfo Text component without crashing 1`] = `
<span
  className="error"
>
  <strong
    className="info"
  >
    Error
  </strong>
  Helpful hint
</span>
`;
